# serializer version: 1
# name: TestVKQuakeGenerator.test_generate[Quake Mission Pack 1 - Scourge of Armagon.quake]
  tuple(
    list([
      '/usr/bin/vkquake',
      '-basedir',
      '/userdata/roms/quake',
      '-hipnotic',
    ]),
    dict({
      'SDL_GAMECONTROLLERCONFIG': '030000005e0400000a0b000005040000,Generic Xbox pad,platform:Linux,b:b0,a:b1,dpdown:h0.4,leftx:a0,lefty:a1,rightx:a2,righty:a3,lefttrigger:b6,leftstick:b11,dpleft:h0.8,rightshoulder:b5,leftshoulder:b4,righttrigger:b7,rightstick:b12,dpright:h0.2,back:b8,start:b9,dpup:h0.1,y:b2,x:b3,',
      'SDL_JOYSTICK_HIDAPI': '0',
    }),
  )
# ---
# name: TestVKQuakeGenerator.test_generate[Quake Mission Pack 2 - Dissolution of Eternity.quake]
  tuple(
    list([
      '/usr/bin/vkquake',
      '-basedir',
      '/userdata/roms/quake',
      '-rogue',
    ]),
    dict({
      'SDL_GAMECONTROLLERCONFIG': '030000005e0400000a0b000005040000,Generic Xbox pad,platform:Linux,b:b0,a:b1,dpdown:h0.4,leftx:a0,lefty:a1,rightx:a2,righty:a3,lefttrigger:b6,leftstick:b11,dpleft:h0.8,rightshoulder:b5,leftshoulder:b4,righttrigger:b7,rightstick:b12,dpright:h0.2,back:b8,start:b9,dpup:h0.1,y:b2,x:b3,',
      'SDL_JOYSTICK_HIDAPI': '0',
    }),
  )
# ---
# name: TestVKQuakeGenerator.test_generate[Quake.quake]
  tuple(
    list([
      '/usr/bin/vkquake',
      '-basedir',
      '/userdata/roms/quake',
    ]),
    dict({
      'SDL_GAMECONTROLLERCONFIG': '030000005e0400000a0b000005040000,Generic Xbox pad,platform:Linux,b:b0,a:b1,dpdown:h0.4,leftx:a0,lefty:a1,rightx:a2,righty:a3,lefttrigger:b6,leftstick:b11,dpleft:h0.8,rightshoulder:b5,leftshoulder:b4,righttrigger:b7,rightstick:b12,dpright:h0.2,back:b8,start:b9,dpup:h0.1,y:b2,x:b3,',
      'SDL_JOYSTICK_HIDAPI': '0',
    }),
  )
# ---
# name: TestVKQuakeGenerator.test_get_hotkeys_context
  dict({
    'keys': dict({
      'exit': 'KEY_F10',
      'restore_state': 'KEY_F9',
      'save_state': 'KEY_F6',
    }),
    'name': 'vkquake',
  })
# ---
